2011-02-06  Marcus Mueller  <znek@mulle-kybernetik.com>

	* GNUmakefile*, *.[hm]: ported to GNUstep

	* Info.plist: it's 2011 by now

	* iTunesFileSystem.m: fixed an uninitialized variable access

2011-01-29  Marcus Mueller  <znek@mulle-kybernetik.com>

	* iTunesFSController.[hm]: removed. Added a new FUSEOFSAppController
	  in FUSEOFS which does everything iTunesFS requires in a more
	  abstracted manner.

	* Info.plist: added new "FUSEObjectFileSystemClass" user default
	  for FUSEOFSAppController.

2011-01-26  Marcus Mueller  <znek@mulle-kybernetik.com>

	* GNUmakefile: first changes for gnustep-make 2.4.0 compat

	* iTunesFSFormatter.m, iTunesPlaylist.m, iTunesTrack.m, iPodLibrary.m,
	  iTunesLibrary.m: fixed imports

	* removed outdated FUSEObjC-GNUstep subproject

	* FUSEOFS is an svn:external now

	* NSString+Extensions.[hm]: moved -properlyEscapedFSRepresentation to
	  FUSEOFS/NSString+FUSEOFS.[hm]

	* iPodLibrary.m, iTunesFSFormatter.m, iTunesLibrary.m, iTunesTrack.m:
	  adjusted includes

2010-12-22  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.2.0

	* iTunesFileSystem.m: only show AlbumsTrackFormat.txt if new
	  'ShowFormatFiles' default is YES and 'UseCategories' is YES

	* iTunesFormatFile.m: ignore lines starting with '#' altogether

	* iTunesPlaylist.m: use new 'ShowFormatFiles' default

	* v1.2.0b1

	* NSObject+FUSEOFS.[hm]: changed layout and renamed every wording of
	  'directory' into 'container'.

	* iTunesFileSystem.m, iTunesLibrary.m, iTunesPlaylist.m,
	  FUSEObjectFileSystem.m, FUSEOFSFileProxy.m, FUSEOFSMemoryFile.m,
	  FUSEOFSMemoryObject.m

	* FUSEOFSMemoryFolder.[hm]: renamed to FUSEOFSMemoryContainer

	* FUSEOFSMemoryContainer.[hm]: see above

	* FUSEObjectFileSystem.m: minor fix for valueOfExtendedAttribute:...

	* iTunesFileSystem.[hm]: implemented 'AlbumsTrackFormat.txt' and
	  'PlaylistsTrackFormat.txt' for global default manipulation

	* iTunesFormatFile.m: bugfixes
