@@ -1,3 +1,3 @@
 MAJOR_VERSION=1
 MINOR_VERSION=2
-SUBMINOR_VERSION=0
+SUBMINOR_VERSION=1b1
